@@ -9,6 +9,7 @@ import glide.api.models.commands.geospatial.GeospatialData;
 import java.lang.reflect.Array;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -26,22 +27,31 @@ public class ArrayTransformUtils {
      * @return Array of strings [key1, value1.toString(), key2, value2.toString(), ...].
      */
     public static String[] convertMapToKeyValueStringArray(Map<String, ?> args) {
-        return args.entrySet().stream()
-                .flatMap(entry -> Stream.of(entry.getKey(), entry.getValue()))
-                .toArray(String[]::new);
+        final String[] result = new String[args.size() * 2];
+        int i = 0;
+        for (Map.Entry<String, ?> entry : args.entrySet()) {
+            result[i++] = entry.getKey();
+            Object value = entry.getValue();
+            result[i++] = value == null ? null : String.valueOf(value);
+        }
+        return result;
     }
 
     /**
      * Converts a map of GlideString keys and values to an array of GlideStrings.
      *
      * @param args Map of GlideString keys to values of GlideString.
-     * @return Array of strings [key1, gs(value1.toString()), key2, gs(value2.toString()), ...].
+     * @return Array of GlideStrings [key1, value1, key2, value2, ...].
      */
     public static GlideString[] convertMapToKeyValueGlideStringArray(
             Map<GlideString, GlideString> args) {
-        return args.entrySet().stream()
-                .flatMap(entry -> Stream.of(entry.getKey(), entry.getValue()))
-                .toArray(GlideString[]::new);
+        final GlideString[] result = new GlideString[args.size() * 2];
+        int i = 0;
+        for (Map.Entry<GlideString, GlideString> entry : args.entrySet()) {
+            result[i++] = entry.getKey();
+            result[i++] = entry.getValue();
+        }
+        return result;
     }
 
     /**
@@ -211,7 +221,7 @@ public class ArrayTransformUtils {
             U score = clazz.cast(entry.getValue());
             innerMap.put(subKey, score);
         }
-        return Map.of(key, innerMap);
+        return Collections.singletonMap(key, innerMap);
     }
 
     /**
@@ -239,7 +249,7 @@ public class ArrayTransformUtils {
             U score = clazz.cast(entry.getValue());
             innerMap.put(subKey, score);
         }
-        return Map.of(key, innerMap);
+        return Collections.singletonMap(key, innerMap);
     }
 
     /**
@@ -391,13 +401,13 @@ public class ArrayTransformUtils {
         List<GlideString> keysList = new ArrayList<>();
         List<GlideString> valuesList = new ArrayList<>();
 
-        for (var entry : args.entrySet()) {
+        for (Map.Entry<?, ?> entry : args.entrySet()) {
             keysList.add(GlideString.of(entry.getKey()));
             valuesList.add(GlideString.of(entry.getValue()));
         }
 
         return concatenateArrays(
-                keysList.toArray(GlideString[]::new), valuesList.toArray(GlideString[]::new));
+                keysList.toArray(new GlideString[0]), valuesList.toArray(new GlideString[0]));
     }
 
     /**
